[gd_scene load_steps=22 format=3 uid="uid://r68jre2w5k33"]

[ext_resource type="Script" path="res://mainSystem/scripts/player/xrplayer-controller.gd" id="1_iwrfe"]
[ext_resource type="Script" path="res://mainSystem/scripts/player/hand.gd" id="2_npgyv"]
[ext_resource type="Script" path="res://mainSystem/scripts/player/flat_camera.gd" id="2_wrxg3"]
[ext_resource type="PackedScene" uid="uid://12mm63qyglpf" path="res://mainSystem/scenes/player/handray.tscn" id="4_316iy"]
[ext_resource type="PackedScene" uid="uid://b2r6qi0effaiw" path="res://addons/contextmenu/gridmenu/gridmenubutton.tscn" id="5_d1mpu"]
[ext_resource type="Texture2D" uid="uid://cncindvbjlp8g" path="res://mainAssets/ui/assets/wrist_menu/UI_mockup_trasparent.png" id="6_j5bbn"]
[ext_resource type="Script" path="res://mainSystem/scripts/player/notificationpositioner.gd" id="8_n4qtp"]
[ext_resource type="PackedScene" uid="uid://cr02u36wo3sqp" path="res://addons/contextmenu/gridmenu/handmenu.tscn" id="9_opil0"]
[ext_resource type="Script" path="res://addons/Panel3D/3dpanel.gd" id="9_u4nd0"]
[ext_resource type="PackedScene" uid="uid://doy6bwhtmwdc6" path="res://mainAssets/ui/3dPanel/local ui/localmenu.tscn" id="9_ydb0h"]
[ext_resource type="Script" path="res://addons/SimpleOpenXRHand/simple_openxr_hand.gd" id="11_3flo1"]

[sub_resource type="GDScript" id="GDScript_swjn5"]

[sub_resource type="SphereShape3D" id="SphereShape3D_1q63w"]
radius = 0.1

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_cw1w7"]
albedo_color = Color(0.6, 0.466667, 0.866667, 1)

[sub_resource type="BoxMesh" id="BoxMesh_mky8q"]
material = SubResource("StandardMaterial3D_cw1w7")
size = Vector3(0.05, 0.05, 0.15)

[sub_resource type="BoxShape3D" id="BoxShape3D_ndmcs"]
margin = 0.0
size = Vector3(0, 0, 0)

[sub_resource type="GDScript" id="GDScript_utwae"]
script/source = "extends Node3D

#func _process(delta):
#	look_at(get_tree().get_first_node_in_group(\"playerCamera\").global_position)
"

[sub_resource type="GDScript" id="GDScript_dn0nl"]
script/source = "extends Label3D

#func _process(delta):
	#text = str(1/delta)
"

[sub_resource type="BoxMesh" id="BoxMesh_kgbb2"]
size = Vector3(0.1, 0.1, 0.1)

[sub_resource type="GDScript" id="GDScript_2vxca"]
script/source = "extends Node

@export var flipped := false
@export var x := true
@export var y := true
@export var z := true

func _process(_delta):
	var prev_rot :Vector3= get_parent().rotation
	get_parent().look_at(get_tree().get_first_node_in_group('player').get_viewport().get_camera_3d().global_position, Vector3.UP, flipped)
	if !x:
		get_parent().rotation.x = prev_rot.x
	if !y:
		get_parent().rotation.y = prev_rot.y
	if !z:
		get_parent().rotation.z = prev_rot.z
"

[sub_resource type="CylinderShape3D" id="CylinderShape3D_clvwe"]
height = 1.0
radius = 0.1

[node name="CharacterBody3D" type="CharacterBody3D" groups=["player"]]
script = ExtResource("1_iwrfe")
metadata/health = SubResource("GDScript_swjn5")

[node name="xrplayer" type="XROrigin3D" parent="."]

[node name="Camera3D" type="Camera3D" parent="xrplayer"]
current = true

[node name="camray" type="RayCast3D" parent="xrplayer/Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.13393)
visible = false
target_position = Vector3(0, 0, -1000)
collision_mask = 65535
hit_back_faces = false
script = ExtResource("2_wrxg3")

[node name="worldRay" parent="xrplayer/Camera3D" instance=ExtResource("4_316iy")]
unique_name_in_owner = true
collision_mask = 3

[node name="uiRay" parent="xrplayer/Camera3D" instance=ExtResource("4_316iy")]
unique_name_in_owner = true
collision_mask = 260

[node name="XrCamera3d" type="XRCamera3D" parent="xrplayer" groups=["playerCamera"]]
cull_mask = 1048573
fov = 90.0

[node name="Node3D" type="Node3D" parent="xrplayer/XrCamera3d" groups=["notificationparent"]]
transform = Transform3D(0.075, 0, 0, 0, 0.075, 0, 0, 0, 0.075, -0.0929923, -0.0845834, -0.183947)

[node name="iktarget" type="Node3D" parent="xrplayer/XrCamera3d"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0.141187)

[node name="righthand" type="XRController3D" parent="xrplayer"]
unique_name_in_owner = true
tracker = &"right_hand"
script = ExtResource("2_npgyv")

[node name="handproxy" type="Node3D" parent="xrplayer/righthand"]

[node name="grabParent" type="Node3D" parent="xrplayer/righthand/handproxy"]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 0, 0, 0)

[node name="worldRay" parent="xrplayer/righthand/handproxy" instance=ExtResource("4_316iy")]
collision_mask = 3

[node name="uiRay" parent="xrplayer/righthand/handproxy" instance=ExtResource("4_316iy")]
collision_mask = 260

[node name="grabArea" type="Area3D" parent="xrplayer/righthand/handproxy"]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 0.05, 0, 4.37114e-09)
input_ray_pickable = false
monitorable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="xrplayer/righthand/handproxy/grabArea"]
shape = SubResource("SphereShape3D_1q63w")

[node name="MeshInstance3d" type="MeshInstance3D" parent="xrplayer/righthand/handproxy"]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 0, 0, 0)
mesh = SubResource("BoxMesh_mky8q")
skeleton = NodePath("")

[node name="handMenuPoint" type="Node3D" parent="xrplayer/righthand/handproxy"]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 0, 0, -0.203)

[node name="StaticBody3D" type="StaticBody3D" parent="xrplayer/righthand/handproxy"]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 0, 0, 0)
visible = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="xrplayer/righthand/handproxy/StaticBody3D"]
shape = SubResource("BoxShape3D_ndmcs")
disabled = true

[node name="grabjoint" type="Generic6DOFJoint3D" parent="xrplayer/righthand/handproxy"]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 0, 0, 0)
node_a = NodePath("../StaticBody3D")

[node name="wristmenu" type="Node3D" parent="xrplayer/righthand/handproxy"]
transform = Transform3D(6.03961e-14, 1.9845e-08, 0.454, 1.5876e-07, 0.454, -1.9845e-08, -0.454, 1.5876e-07, -3.90799e-14, 1.74846e-08, 0, 0.202191)
script = SubResource("GDScript_utwae")

[node name="StaticBody3D" parent="xrplayer/righthand/handproxy/wristmenu" instance=ExtResource("5_d1mpu")]
transform = Transform3D(-1, 6.99383e-07, -8.74228e-08, 6.99383e-07, 1, -8.74229e-08, 8.74227e-08, -8.74229e-08, -1, 0.05, 7.78848e-08, 2.18557e-09)
itemToSpawn = "res://mainSystem/scenes/objects/toys/bouncyballgun.tscn"
text = "spawn cubegun"

[node name="StaticBody3D2" parent="xrplayer/righthand/handproxy/wristmenu" instance=ExtResource("5_d1mpu")]
transform = Transform3D(-1, 6.99383e-07, -8.74228e-08, 6.99383e-07, 1, -8.74229e-08, 8.74227e-08, -8.74229e-08, -1, 0.15, -7.95723e-10, -1.09278e-08)
itemToSpawn = "res://mainSystem/scenes/objects/tools/rigid_camera.tscn"
text = "spawn camera"

[node name="Sprite3D" type="Sprite3D" parent="xrplayer/righthand/handproxy/wristmenu"]
transform = Transform3D(5.81366e-09, 0.019, 5.81362e-09, 1.66103e-09, -5.81362e-09, 0.019, 0.019, -5.81366e-09, -1.66103e-09, 0, -2.77682e-09, -0.0635259)
visible = false
texture = ExtResource("6_j5bbn")

[node name="fps" type="Label3D" parent="xrplayer/righthand/handproxy/wristmenu"]
transform = Transform3D(-1, 3.49692e-07, 2.62269e-07, 2.62269e-07, 1.31134e-07, 1, 3.49692e-07, 1, -1.31134e-07, 0.881057, -2.98471e-07, 0.220264)
visible = false
pixel_size = 0.002
text = "test"
script = SubResource("GDScript_dn0nl")

[node name="lefthand" type="XRController3D" parent="xrplayer"]
unique_name_in_owner = true
tracker = &"left_hand"
script = ExtResource("2_npgyv")

[node name="handproxy" type="Node3D" parent="xrplayer/lefthand"]

[node name="worldRay" parent="xrplayer/lefthand/handproxy" instance=ExtResource("4_316iy")]
collision_mask = 3

[node name="uiRay" parent="xrplayer/lefthand/handproxy" instance=ExtResource("4_316iy")]
collision_mask = 260

[node name="grabParent" type="Node3D" parent="xrplayer/lefthand/handproxy"]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 0, 0, 0)

[node name="grabArea" type="Area3D" parent="xrplayer/lefthand/handproxy"]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, -0.05, 0, -4.37114e-09)
input_ray_pickable = false
monitorable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="xrplayer/lefthand/handproxy/grabArea"]
shape = SubResource("SphereShape3D_1q63w")

[node name="MeshInstance3d" type="MeshInstance3D" parent="xrplayer/lefthand/handproxy"]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 0, 0, 0)
mesh = SubResource("BoxMesh_mky8q")
skeleton = NodePath("")

[node name="Label3D" type="Label3D" parent="xrplayer/lefthand/handproxy"]
transform = Transform3D(-0.285086, 0, -0.958502, 0, 1, 0, 0.958502, 0, -0.285086, -5.00462e-10, 0.1, 0.00572462)
visible = false
pixel_size = 0.001
text = "test"

[node name="handMenuPoint" type="Node3D" parent="xrplayer/lefthand/handproxy"]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 0, 0, -0.203)

[node name="StaticBody3D" type="StaticBody3D" parent="xrplayer/lefthand/handproxy"]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 0, 0, 0)
visible = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="xrplayer/lefthand/handproxy/StaticBody3D"]
shape = SubResource("BoxShape3D_ndmcs")
disabled = true

[node name="grabjoint" type="Generic6DOFJoint3D" parent="xrplayer/lefthand/handproxy"]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 0, 0, 0)
node_a = NodePath("../StaticBody3D")

[node name="notificationparent" type="Node3D" parent="xrplayer/lefthand/handproxy" groups=["notificationparent"]]
transform = Transform3D(-4.37114e-09, -4.37114e-09, 0.1, -4.37114e-09, -0.1, -4.37114e-09, 0.1, -4.37114e-09, 4.37114e-09, 0.048, -0.064, -0.077)
script = ExtResource("8_n4qtp")

[node name="lefthandtracking" type="Node3D" parent="xrplayer"]
unique_name_in_owner = true
script = ExtResource("11_3flo1")

[node name="righthandtracking" type="Node3D" parent="xrplayer"]
unique_name_in_owner = true
script = ExtResource("11_3flo1")
hand = 1

[node name="XRAnchor3D" type="XRAnchor3D" parent="xrplayer"]

[node name="MeshInstance3D" type="MeshInstance3D" parent="xrplayer/XRAnchor3D"]
mesh = SubResource("BoxMesh_kgbb2")

[node name="menuoffset" type="Node3D" parent="xrplayer"]
unique_name_in_owner = true

[node name="handmenu" parent="xrplayer/menuoffset" instance=ExtResource("9_opil0")]
unique_name_in_owner = true
visible = false

[node name="Panel3D" type="StaticBody3D" parent="xrplayer/menuoffset" groups=["localuipanel"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, -1)
collision_layer = 4
collision_mask = 4
script = ExtResource("9_u4nd0")
_auto_load_ui = ExtResource("9_ydb0h")
viewport_size = Vector2i(1389, 1024)
ANCHOR_POSITION = 3
render_priority = 127
on_top = true
metadata/grabbable = true

[node name="parent_lookat_user_camera" type="Node" parent="xrplayer/menuoffset/Panel3D" groups=["localuilookat"]]
script = SubResource("GDScript_2vxca")
flipped = true

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.496656, 0)
shape = SubResource("CylinderShape3D_clvwe")

[node name="playercamoffset" type="Node3D" parent="."]

[node name="modules" type="Node" parent="."]
